upgraded to pip.services 3.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /node_modules
 /npm-debug.log
 /.idea
-/data/help-articles.test.json
-/data/help-articles.json
-/data/help-topics.test.json
-/data/help-topics.json
+/data/help_articles.test.json
+/data/help_articles.json
+/data/help_topics.test.json
+/data/help_topics.json
 /obj/test
 /docker/id_rsa*
